{
  "version": 4,
  "terraform_version": "1.10.2",
  "serial": 21,
  "lineage": "a5270603-7065-9320-4240-9e643ed565ae",
  "resources": [
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gh-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:021891584638:internet-gateway/igw-0931dd7e4e2f57d90",
            "id": "igw-0931dd7e4e2f57d90",
            "owner_id": "021891584638",
            "vpc_id": "vpc-059dab79852af0d96"
          },
          "dependencies": [
            "module.networking.aws_vpc.gh-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "gh-routeTable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:021891584638:route-table/rtb-075bd10cbee71fa3d",
            "id": "rtb-075bd10cbee71fa3d",
            "owner_id": "021891584638",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0931dd7e4e2f57d90",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "gh-routeTable"
            },
            "tags_all": {
              "Name": "gh-routeTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-059dab79852af0d96"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.gh-igw",
            "module.networking.aws_vpc.gh-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "gh-routeTableAssoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0581cf073feea15df",
            "route_table_id": "rtb-075bd10cbee71fa3d",
            "subnet_id": "subnet-0f817846c229d73a9"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.gh-igw",
            "module.networking.aws_route_table.gh-routeTable",
            "module.networking.aws_subnet.gh-publicSubnet",
            "module.networking.aws_vpc.gh-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "gh-publicSubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:021891584638:subnet/subnet-0f817846c229d73a9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f817846c229d73a9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "021891584638",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "publicSubnet"
            },
            "tags_all": {
              "Name": "publicSubnet"
            },
            "vpc_id": "vpc-059dab79852af0d96"
          },
          "dependencies": [
            "module.networking.aws_vpc.gh-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "gh-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:021891584638:vpc/vpc-059dab79852af0d96",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-0c80df147496b3dca",
            "default_route_table_id": "rtb-0edb1fac25ecbff89",
            "default_security_group_id": "sg-03a43f898cbe8f78b",
            "dhcp_options_id": "dopt-0a81aa7e970a2eb95",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-059dab79852af0d96",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0edb1fac25ecbff89",
            "owner_id": "021891584638"
          }
        }
      ]
    },
    {
      "module": "module.securityGroup",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "gh-serverSg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:021891584638:security-group/sg-0a32e41682f264c13",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a32e41682f264c13",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "terraform-20241213070716021000000001",
            "name_prefix": "terraform-",
            "owner_id": "021891584638",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "gh-serverSg"
            },
            "tags_all": {
              "Name": "gh-serverSg"
            },
            "timeouts": null,
            "vpc_id": "vpc-059dab79852af0d96"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.gh-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.server",
      "mode": "managed",
      "type": "aws_instance",
      "name": "gh-tomcat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b96f981d460859a",
            "arn": "arn:aws:ec2:ap-south-1:021891584638:instance/i-01aed41cd831bf7d0",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01aed41cd831bf7d0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "my_server_01",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f8d0e3e48c54a70c",
            "private_dns": "ip-10-0-0-74.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.74",
            "public_ip": "43.205.233.20",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0aac1a8873208b738",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f817846c229d73a9",
            "tags": {
              "Name": "gh-tomcat"
            },
            "tags_all": {
              "Name": "gh-tomcat"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a32e41682f264c13"
            ]
          },
          "dependencies": [
            "module.networking.aws_subnet.gh-publicSubnet",
            "module.networking.aws_vpc.gh-vpc",
            "module.securityGroup.aws_security_group.gh-serverSg"
          ]
        }
      ]
    }
  ]
}